2003-07-11  Tim Legant  <tim@catseye.net>

	* Defaults.py: New variables DB_BARE_APPEND and
	DB_CONFIRM_APPEND.

	* FilterParser.py (FilterParser): Removed {from,to}-mysql code.
	Moved __create_sql_params method to module-level function
	create_sql_params.  Removed -domains argument and always add the
	domains into the keys.  Made the domains list contain only unique
	domains.

	* Util.py (db_insert): New function, used by the DB_BARE_APPEND
	and DB_CONFIRM_APPEND code.

2003-07-01  Tim Legant  <tim@catseye.net>

	* Util.py (filter_match): Create FilterParser with DB_CONNECTION.

	* FilterParser.py (FilterParser): Fixed two regular expressions
	that were too "greedy".
	(__create_sql_params, __create_sql_criteria, __get_column_index):
	New SQL support functions.
	(__search_sql): Main SQL searching function.
	(firstmatch): Added from-sql/to-sql rules.  Should work for any
	SQL database that has a Python DB API 2.0 module.

	* Defaults.py (DB_CONNECTION): New variable.

2003-06-25  Tim Legant  <tim@catseye.net>

	* Address.py: Fixed ConfirmAddress, removed formatting code from
	DatedAddress.timestamp().

2003-06-20  Gre7g Luterman  <gre7g@wolfhome.com>

	* Fixed a bug in the LDAP code found by Chet McNeill.

2003-06-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (maketext): Now accepts an absolute pathname to a
	template file which short-circuits the searching process.

2003-06-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* FilterParser.py (_FilterFile.__init__): bounce,reject now can
	take an option, which is the path to a specific template.

2003-06-05  Cory Wright <cwright@standblue.net>

	* Util.py (maketext): Recognize TEMPLATE_DIR_MATCH_RECIPIENT.
	
	* Defaults.py (TEMPLATE_DIR_MATCH_RECIPIENT): New variable

2003-06-04  Tim Legant  <tim@catseye.net>

	* Util.py (make_msgid): Added ability for TMDAIDTAG environment
	variable to override the string "TMDA" in the tag portion of the
	generated Message-ID.
